Deployment/CloudFormation/IxVM/IxVM-on-AWS-2-VMone-Use-Case-CloudFormation.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "IxVM on AWS 2-VMone Test CloudFormation",
	"Mappings" : {
		"RegionMap" : {
			"us-east-1" : {
				"AMIxVMONE" : "ami-0b00ea407a5ce19b1",
				"EC2xCONNECTxCIDR" : "18.206.107.24/29",
				"EC2xREGION" : "US East (N. Virginia)",
				"REGIONxTAG" : "US_EAST_1"
			},
			"us-east-2" : {
				"AMIxVMONE" : "ami-07cb7aa9ac8bc6d15",
				"EC2xCONNECTxCIDR" : "3.16.146.0/29",
				"EC2xREGION" : "US East (Ohio)",
				"REGIONxTAG" : "US_EAST_2"
			},
			"us-west-1" : {
				"AMIxVMONE" : "ami-0878855f57776ab2a",
				"EC2xCONNECTxCIDR" : "13.52.6.112/29",
				"EC2xREGION" : "US West (N. California)",
				"REGIONxTAG" : "US_WEST_1"
			},
			"us-west-2" : {
				"AMIxVMONE" : "ami-028d4579e0063447f",
				"EC2xCONNECTxCIDR" : "18.237.140.160/29",
				"EC2xREGION" : "US West (Oregon)",
				"REGIONxTAG" : "US_WEST_2"
			},
			"ap-east-1" : {
				"AMIxVMONE" : "ami-a794eed6",
				"EC2xCONNECTxCIDR" : "18.206.107.24/29",
				"EC2xREGION" : "Asia Pacific (Hong Kong)",		
				"REGIONxTAG" : "AP_EAST_1"
			},
			"ap-south-1" : {
				"AMIxVMONE" : "ami-09760acbd7f44fb7a",
				"EC2xCONNECTxCIDR" : "13.233.177.0/29",
				"EC2xREGION" : "Asia Pacific (Mumbai)",
				"REGIONxTAG" : "AP_SOUTH_1"
			},
			"ap-northeast-2" : {
				"AMIxVMONE" : "ami-0f3a746be4a556c48",
				"EC2xCONNECTxCIDR" : "13.209.1.56/29",
				"EC2xREGION" : "Asia Pacific (Seoul)",
				"REGIONxTAG" : "AP_NORTHEAST_2"
			},
			"ap-southeast-1" : {
				"AMIxVMONE" : "ami-0718d39a7db41a331",
				"EC2xCONNECTxCIDR" : "3.0.5.32/29",
				"EC2xREGION" : "Asia Pacific (Singapore)",
				"REGIONxTAG" : "AP_SOUTHEAST_1"
			},
			"ap-southeast-2" : {
				"AMIxVMONE" : "ami-0928e2f36d1ea6f57",
				"EC2xCONNECTxCIDR" : "13.239.158.0/29",
				"EC2xREGION" : "Asia Pacific (Sydney)",
				"REGIONxTAG" : "AP_SOUTHEAST_2"
			},
			"ap-northeast-1" : {
				"AMIxVMONE" : "ami-0d3e2d4e42fd930e6",
				"EC2xCONNECTxCIDR" : "3.112.23.0/29",
				"EC2xREGION" : "Asia Pacific (Tokyo)",
				"REGIONxTAG" : "AP_NORTHEAST_1"
			},
			"ca-central-1" : {
				"AMIxVMONE" : "ami-0592ae713210c3ba5",
				"EC2xCONNECTxCIDR" : "35.183.92.176/29",
				"EC2xREGION" : "Canada (Central)",
				"REGIONxTAG" : "CA_CENTRAL_1"
			},
			"eu-central-1" : {
				"AMIxVMONE" : "ami-00445a890be8b626c",
				"EC2xCONNECTxCIDR" : "3.120.181.40/29",
				"EC2xREGION" : "EU (Frankfurt)",
				"REGIONxTAG" : "EU_CENTRAL_1"
			},
			"eu-west-1" : {
				"AMIxVMONE" : "ami-08e0469fdc7dcef91",
				"EC2xCONNECTxCIDR" : "18.202.216.48/29",
				"EC2xREGION" : "EU (Ireland)",
				"REGIONxTAG" : "EU_WEST_1"
			},
			"eu-west-2" : {
				"AMIxVMONE" : "ami-0381ff044ceb1761d",
				"EC2xCONNECTxCIDR" : "3.8.37.24/29",
				"EC2xREGION" : "EU (London)",
				"REGIONxTAG" : "EU_WEST_2"
			},
			"eu-west-3" : {
				"AMIxVMONE" : "ami-0b41ffb2ddf330ee3",
				"EC2xCONNECTxCIDR" : "35.180.112.80/29",
				"EC2xREGION" : "EU (Paris)",
				"REGIONxTAG" : "EU_WEST_3"
			},
			"eu-north-1" : {
				"AMIxVMONE" : "ami-078fc9340da9537e9",
				"EC2xCONNECTxCIDR" : "13.48.4.200/30",
				"EC2xREGION" : "EU (Stockholm)",
				"REGIONxTAG" : "EU_NORTH_1"
			},
			"me-south-1" : {
				"AMIxVMONE" : "ami-083788bc5cd064160",
				"EC2xCONNECTxCIDR" : "18.206.107.24/29",
				"EC2xREGION" : "Middle East (Bahrain)",		
				"REGIONxTAG" : "ME_SOUTH_1"
			},
			"sa-east-1" : {
				"AMIxVMONE" : "ami-0c2513eebf87a5339",
				"EC2xCONNECTxCIDR" : "13.48.4.200/30",
				"EC2xREGION" : "South America (Sao Paulo)",
				"REGIONxTAG" : "SA_EAST_1"
			}
		},
		"VariableMap" : {
			"global" : {
				"OPTIONSxTAG" : "MANUAL",
				"PROJECTxTAG" : "OPEN_IXIA",
				"VPCxCIDRxBLOCK" : "10.0.0.0/16",
				"VPCxINSTANCExTENANCY" : "default",
				"VPCxENABLExDNSxSUPPORT" : true,
				"VPCxENABLExDNSxHOSTNAMES" : true,
				"PLACEMENTxGROUPxSTRATEGY" : "cluster",
				"FLOWxLOGxRESOURCExTYPE" : "VPC",
				"FLOWxLOGxTRAFFICxTYPE" : "REJECT",
				"SUBNETxAVAILABILITYxZONExINDEX" : "0",
				"MGMTxSUBNETxCIDRxBLOCK" : "10.0.10.0/24",
				"TEST1xSUBNETxCIDRxBLOCK" : "10.0.2.0/24",
				"TEST2xSUBNETxCIDRxBLOCK" : "10.0.3.0/24",
				"INTERFACExSOURCExDESTxCHECK" : false,
				"INSTANCExDISABLExAPIxTERMINATION" : false,
				"INSTANCExMONITORING" : false,
				"INSTANCExINSTANCExINITIATEDxSHUTDOWNxBEHAVIOR" : "stop",
				"INSTANCExBLOCKxDEVICExNAME" : "/dev/sda1",
				"INSTANCExEBSxDELETExONxTERMINATION" : true,
				"INSTANCExEBSxVOLUMExTYPE" : "gp2",
				"APPxTAG" : "IXIA",
				"APPxVERSION" : "9.00.1900.10"
			},
			"local" : {
				"VMONE1xETH0xPRIVATExIPxADDRESS" : "10.0.10.11",
				"VMONE1xETH1xPRIVATExIPxADDRESSES" : "10.0.2.12|10.0.2.13|10.0.2.14|10.0.2.15|10.0.2.16|10.0.2.17|10.0.2.18|10.0.2.19|10.0.2.20|10.0.2.21",
				"VMONE2xETH0xPRIVATExIPxADDRESS" : "10.0.10.12",
				"VMONE2xETH1xPRIVATExIPxADDRESSES" : "10.0.3.12|10.0.3.13|10.0.3.14|10.0.3.15|10.0.3.16|10.0.3.17|10.0.3.18|10.0.3.19|10.0.3.20|10.0.3.21"
			}
		}
	},
	"Resources": {
		"KeyPlacementGroup": {
			"Type" : "AWS::EC2::PlacementGroup",
			"Properties" : {
				"Strategy" : { "Fn::FindInMap" : [ "VariableMap", "global", "PLACEMENTxGROUPxSTRATEGY"] }
			}
		},
		"KeyVpc": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": { "Fn::FindInMap" : [ "VariableMap", "global", "VPCxCIDRxBLOCK"] },
				"InstanceTenancy": { "Fn::FindInMap" : [ "VariableMap", "global", "VPCxINSTANCExTENANCY"] },
				"EnableDnsSupport": { "Fn::FindInMap" : [ "VariableMap", "global", "VPCxENABLExDNSxSUPPORT"] },
				"EnableDnsHostnames": { "Fn::FindInMap" : [ "VariableMap", "global", "VPCxENABLExDNSxHOSTNAMES"] },
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "VPC", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
		"KeyVpcFlowLog" : {
			"Type" : "AWS::EC2::FlowLog",
			"Properties" : {
				"DeliverLogsPermissionArn" : { "Fn::GetAtt" : ["KeyVPCFlowLogAccessRole", "Arn"] },
				"LogGroupName" : { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "VPC_FLOW_LOG", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
				"ResourceId" : { "Ref" : "KeyVpc" },
				"ResourceType" : { "Fn::FindInMap" : [ "VariableMap", "global", "FLOWxLOGxRESOURCExTYPE"] },
				"TrafficType" : { "Fn::FindInMap" : [ "VariableMap", "global", "FLOWxLOGxTRAFFICxTYPE"] }
			}
		},
		"KeyMgmtSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": { "Fn::Select" : [ { "Fn::FindInMap" : [ "VariableMap", "global", "SUBNETxAVAILABILITYxZONExINDEX"] }, { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] },
				"CidrBlock": { "Fn::FindInMap" : [ "VariableMap", "global", "MGMTxSUBNETxCIDRxBLOCK"] },
				"VpcId": {
					"Ref": "KeyVpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "MGMT_SUBNET", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
		"KeyTest1Subnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": { "Fn::Select" : [ { "Fn::FindInMap" : [ "VariableMap", "global", "SUBNETxAVAILABILITYxZONExINDEX"] }, { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] },
				"CidrBlock": { "Fn::FindInMap" : [ "VariableMap", "global", "TEST1xSUBNETxCIDRxBLOCK"] },
				"VpcId": {
					"Ref": "KeyVpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "TEST1_SUBNET", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
  		"KeyTest2Subnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": { "Fn::Select" : [ { "Fn::FindInMap" : [ "VariableMap", "global", "SUBNETxAVAILABILITYxZONExINDEX"] }, { "Fn::GetAZs" : { "Ref" : "AWS::Region" } } ] },
				"CidrBlock": { "Fn::FindInMap" : [ "VariableMap", "global", "TEST2xSUBNETxCIDRxBLOCK"] },
				"VpcId": {
					"Ref": "KeyVpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "TEST2_SUBNET", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
		"KeyMgmtSecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "MGMT_SECURITY_GROUP", 
					{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
				"VpcId": {
					"Ref": "KeyVpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "MGMT_SECURITY_GROUP", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
		"KeyMgmtIngressPing": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
                "Description": "ICMP",
                "FromPort": "-1",
                "IpProtocol": "icmp",
                "ToPort": "-1",
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress1": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"IpProtocol": "-1",
				"SourceSecurityGroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				}
			}
		},
		"KeyMgmtIngress2": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 22,
				"ToPort": 22,
				"CidrIp": { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "EC2xCONNECTxCIDR" ] }
			}
		},
		"KeyMgmtIngress22": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 22,
				"ToPort": 22,
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},
		"KeyMgmtIngress67": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "UDP port",
                "FromPort": "67",
                "IpProtocol": "udp",
                "ToPort": "68",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
		    }
        },
		"KeyMgmtIngress80": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
                "Description": "TCP port - for IM(NV)",
                "FromPort": "80",
                "IpProtocol": "tcp",
                "ToPort": "80",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress111": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},						
                "Description": "TCP port",
                "FromPort": "111",
                "IpProtocol": "tcp",
                "ToPort": "111",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},


		"KeyMgmtIngress123": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "UDP port",
                "FromPort": "123",
                "IpProtocol": "udp",
                "ToPort": "123",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress161": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "UDP port",
                "FromPort": "161",
                "IpProtocol": "udp",
                "ToPort": "162",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress443": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 443,
				"ToPort": 443,
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},
		"KeyMgmtIngress605": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "UDP port",
                "FromPort": "605",
                "IpProtocol": "udp",
                "ToPort": "605",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress998": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "998",
                "IpProtocol": "tcp",
                "ToPort": "1000",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress1000": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},      
				"Description": "UDP port",
                "FromPort": "1000",
                "IpProtocol": "udp",
                "ToPort": "1000",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress1080": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "1080",
                "IpProtocol": "tcp",
                "ToPort": "1080",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress2345": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
                "Description": "TCP port",
                "FromPort": "2345",
                "IpProtocol": "tcp",
                "ToPort": "2345",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress2601": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "2601",
                "IpProtocol": "tcp",
                "ToPort": "2601",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress3222": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "3222",
                "IpProtocol": "tcp",
                "ToPort": "3222",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress3389": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"IpProtocol": "tcp",
				"FromPort": 3389,
				"ToPort": 3389,
				"CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
		},
		"KeyMgmtIngress3601": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},	
				"Description": "TCP port",
                "FromPort": "3601",
                "IpProtocol": "tcp",
                "ToPort": "3601",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress4501": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "4501",
                "IpProtocol": "tcp",
                "ToPort": "4502",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress4601": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},	
				"Description": "TCP port",
                "FromPort": "4601",
                "IpProtocol": "tcp",
                "ToPort": "4601",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress5285": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},	
				"Description": "TCP port",
                "FromPort": "5285",
                "IpProtocol": "tcp",
                "ToPort": "5286",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress5326": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},	
				"Description": "TCP port",
                "FromPort": "5326",
                "IpProtocol": "tcp",
                "ToPort": "5327",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress5480": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "5480",
                "IpProtocol": "tcp",
                "ToPort": "5480",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress5488": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},	
				"Description": "TCP port",
                "FromPort": "5488",
                "IpProtocol": "tcp",
                "ToPort": "5489",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress6001": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "6001",
                "IpProtocol": "tcp",
                "ToPort": "6005",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress6004": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "UDP port",
                "FromPort": "6004",
                "IpProtocol": "udp",
                "ToPort": "6004",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress6665": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "6665",
                "IpProtocol": "tcp",
                "ToPort": "6665",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress6967": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "6967",
                "IpProtocol": "tcp",
                "ToPort": "6967",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress6978": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "6978",
                "IpProtocol": "tcp",
                "ToPort": "6978",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress8021": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "8021",
                "IpProtocol": "tcp",
                "ToPort": "8022",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress8881": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "8881",
                "IpProtocol": "tcp",
                "ToPort": "8881",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress8989": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "8989",
                "IpProtocol": "tcp",
                "ToPort": "8990",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress9101": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},	
				"Description": "TCP port",
                "FromPort": "9101",
                "IpProtocol": "tcp",
                "ToPort": "9102",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress9613": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
                "Description": "TCP port",
                "FromPort": "9613",
                "IpProtocol": "tcp",
                "ToPort": "9676",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress10115": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
                "Description": "TCP port",
                "FromPort": "10115",
                "IpProtocol": "tcp",
                "ToPort": "10116",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress10116": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "UDP port",
                "FromPort": "10116",
                "IpProtocol": "udp",
                "ToPort": "10116",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress10119": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "10119",
                "IpProtocol": "tcp",
                "ToPort": "10119",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress17662": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},	
				"Description": "TCP port",
                "FromPort": "17662",
                "IpProtocol": "tcp",
                "ToPort": "17662",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress17668": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
                "Description": "TCP port",
                "FromPort": "17668",
                "IpProtocol": "tcp",
                "ToPort": "17777",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress18765": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
                "Description": "TCP port",
                "FromPort": "18765",
                "IpProtocol": "tcp",
                "ToPort": "18765",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress21123": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
				"Description": "TCP port",
                "FromPort": "21123",
                "IpProtocol": "tcp",
                "ToPort": "21123",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
		"KeyMgmtIngress21653": {		
 			"Type": "AWS::EC2::SecurityGroupIngress",                   
			"Properties": {
				"GroupId": {
					"Ref": "KeyMgmtSecurityGroup"
				},
                "Description": "TCP port",
                "FromPort": "21653",
                "IpProtocol": "tcp",
                "ToPort": "21653",
                "CidrIp": { "Ref" : "InboundIPv4CidrBlock" }
			}
        },
        "KeyTest1SecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupDescription": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "TEST1_SECURITY_GROUP", 
					{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
                "VpcId": {
                    "Ref": "KeyVpc"
                },
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Ref": "InboundIPv4CidrBlock"
                        },
                        "Description": "HTTP port",
                        "FromPort": "80",
                        "IpProtocol": "tcp",
                        "ToPort": "80"
                    }
                ],
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "TEST1_SECURITY_GROUP", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
		"KeyTest1Ingress1": {
			"Type": "AWS::EC2::SecurityGroupIngress",
			"Properties": {
				"GroupId": {
					"Ref": "KeyTest1SecurityGroup"
				},
				"IpProtocol": "-1",
				"SourceSecurityGroupId": {
					"Ref": "KeyTest1SecurityGroup"
				}
			}
		},
		"KeyDefaultEgress1": {
			"Type" : "AWS::EC2::SecurityGroupEgress",
			"Properties" : {
				"GroupId": { "Fn::GetAtt" : ["KeyVpc", "DefaultSecurityGroup"] },
				"IpProtocol": "-1",
				"SourceSecurityGroupId": { "Fn::GetAtt" : ["KeyVpc", "DefaultSecurityGroup"] }
			}
		},
		"KeyInternetGw": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "INTERNET_GW", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
		"KeyGwAttach": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "KeyVpc"
				},
				"InternetGatewayId": {
					"Ref": "KeyInternetGw"
				}
			}
		},
		"KeyMgmtRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"DestinationCidrBlock": "0.0.0.0/0",
				"RouteTableId": {
					"Ref": "KeyMgmtRouteTable"
				},
				"GatewayId": {
					"Ref": "KeyInternetGw"
				}
			},
			"DependsOn": "KeyGwAttach"
		},
		"KeyMgmtRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "KeyVpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "MGMT_ROUTE_TABLE", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
		"KeyTest1Route": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"DestinationCidrBlock": "0.0.0.0/0",
				"RouteTableId": {
					"Ref": "KeyTest1RouteTable"
				},
				"GatewayId": {
					"Ref": "KeyInternetGw"
				}
			},
			"DependsOn": "KeyGwAttach"
		},		
		"KeyTest1RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "KeyVpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "TEST1_ROUTE_TABLE", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
		"KeyTest2Route": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"DestinationCidrBlock": "0.0.0.0/0",
				"RouteTableId": {
					"Ref": "KeyTest2RouteTable"
				},
				"GatewayId": {
					"Ref": "KeyInternetGw"
				}
			},
			"DependsOn": "KeyGwAttach"
		},		
		"KeyTest2RouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "KeyVpc"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, "TEST2_ROUTE_TABLE", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
		"KeyMgmtSubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "KeyMgmtRouteTable"
				},
				"SubnetId": {
					"Ref": "KeyMgmtSubnet"
				}
			}
		},
		"KeyTest1SubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "KeyTest1RouteTable"
				},
				"SubnetId": {
					"Ref": "KeyTest1Subnet"
				}
			}
		},
		"KeyTest2SubnetRouteTableAssociation": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": {
					"Ref": "KeyTest2RouteTable"
				},
				"SubnetId": {
					"Ref": "KeyTest2Subnet"
				}
			}
		},
		"KeyVMOne1Eth0": {
			"Type": "AWS::EC2::NetworkInterface",
			"Properties": {
				"Description": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, 
					{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxTAG"] }, "VMONE1", 
					{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxVERSION"] }, "ETH0", 
					{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
				"SourceDestCheck": { "Fn::FindInMap" : [ "VariableMap", "global", "INTERFACExSOURCExDESTxCHECK"] },
				"SubnetId": {
					"Ref": "KeyMgmtSubnet"
				},
				"GroupSet": [
					{
						"Ref": "KeyMgmtSecurityGroup"
					}
				],
				"PrivateIpAddress": { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE1xETH0xPRIVATExIPxADDRESS"] },
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxTAG"] }, "VMONE1", 
							{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxVERSION"] }, "ETH0", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
		"KeyVMOne1Eth1": {
			"Type": "AWS::EC2::NetworkInterface",
			"Properties": {
				"Description": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, 
					{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxTAG"] }, "VMONE1", 
					{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxVERSION"] }, "ETH1", 
					{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
				"SourceDestCheck": { "Fn::FindInMap" : [ "VariableMap", "global", "INTERFACExSOURCExDESTxCHECK"] },
				"SubnetId": {
					"Ref": "KeyTest1Subnet"
				},
				"GroupSet": [
					{
						"Ref": "KeyTest1SecurityGroup"
					}
				],
				"PrivateIpAddress": { "Fn::Select" : [ "0", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
				"PrivateIpAddresses": [
					{
						"PrivateIpAddress": { "Fn::Select" : [ "1", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "2", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "3", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "4", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "5", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "6", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "7", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "8", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "9", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE1xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxTAG"] }, "VMONE1", 
							{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxVERSION"] }, "ETH1", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},        
		"KeyVMOne2Eth0": {
			"Type": "AWS::EC2::NetworkInterface",
			"Properties": {
				"Description": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, 
					{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxTAG"] }, "VMONE2", 
					{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxVERSION"] }, "ETH0", 
					{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
				"SourceDestCheck": { "Fn::FindInMap" : [ "VariableMap", "global", "INTERFACExSOURCExDESTxCHECK"] },
				"SubnetId": {
					"Ref": "KeyMgmtSubnet"
				},
				"GroupSet": [
					{
						"Ref": "KeyMgmtSecurityGroup"
					}
				],
				"PrivateIpAddress": { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE2xETH0xPRIVATExIPxADDRESS"] },
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxTAG"] }, "VMONE2", 
							{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxVERSION"] }, "ETH0", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
		"KeyVMOne2Eth1": {
			"Type": "AWS::EC2::NetworkInterface",
			"Properties": {
				"Description": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, 
					{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxTAG"] }, "VMONE2", 
					{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxVERSION"] }, "ETH1", 
					{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] },
				"SourceDestCheck": { "Fn::FindInMap" : [ "VariableMap", "global", "INTERFACExSOURCExDESTxCHECK"] },
				"SubnetId": {
					"Ref": "KeyTest2Subnet"
				},
				"GroupSet": [
					{
						"Ref": "KeyTest1SecurityGroup"
					}
				],
				"PrivateIpAddress": { "Fn::Select" : [ "0", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE2xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
				"PrivateIpAddresses": [
					{
						"PrivateIpAddress": { "Fn::Select" : [ "1", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE2xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "2", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE2xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "3", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE2xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "4", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE2xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "5", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE2xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "6", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE2xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "7", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE2xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "8", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE2xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					},
					{
						"PrivateIpAddress": { "Fn::Select" : [ "9", { "Fn::Split" : [ "|", { "Fn::FindInMap" : [ "VariableMap", "local", "VMONE2xETH1xPRIVATExIPxADDRESSES" ] } ] } ] },
						"Primary": false
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxTAG"] }, "VMONE2", 
							{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxVERSION"] }, "ETH1", 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				]
			}
		},
		"KeyVMOne1": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"DisableApiTermination": { "Fn::FindInMap" : [ "VariableMap", "global", "INSTANCExDISABLExAPIxTERMINATION"] },
				"InstanceInitiatedShutdownBehavior": { "Fn::FindInMap" : [ "VariableMap", "global", "INSTANCExINSTANCExINITIATEDxSHUTDOWNxBEHAVIOR"] },
				"ImageId": { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMIxVMONE"] },
				"InstanceType": { "Ref" : "VMoneInstanceType" },
				"Monitoring": { "Fn::FindInMap" : [ "VariableMap", "global", "INSTANCExMONITORING"] },
                "KeyName" : { "Ref" : "IxClientSSHKey" },
				"PlacementGroupName" : { "Ref" : "KeyPlacementGroup" },
				"IamInstanceProfile": { "Ref": "KeyEC2InstanceProfile" },				
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxTAG"] }, "VMONE1", 
							{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxVERSION"] }, 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				],
				"UserData": "",
				"NetworkInterfaces": [
					{
						"NetworkInterfaceId": {
							"Ref": "KeyVMOne1Eth0"
						},
						"DeviceIndex": "0"
					},
					{
						"NetworkInterfaceId": {
							"Ref": "KeyVMOne1Eth1"
						},
						"DeviceIndex": "1"
					}
				],
				"BlockDeviceMappings" : [
					{
						"DeviceName" : { "Fn::FindInMap" : [ "VariableMap", "global", "INSTANCExBLOCKxDEVICExNAME"] },
						"Ebs" : { 
							"DeleteOnTermination" : { "Fn::FindInMap" : [ "VariableMap", "global", "INSTANCExEBSxDELETExONxTERMINATION"] },
							"VolumeType" : { "Fn::FindInMap" : [ "VariableMap", "global", "INSTANCExEBSxVOLUMExTYPE"] }
						}
					}
				]   
			}
		},
		"KeyVMOne2": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"DisableApiTermination": { "Fn::FindInMap" : [ "VariableMap", "global", "INSTANCExDISABLExAPIxTERMINATION"] },
				"InstanceInitiatedShutdownBehavior": { "Fn::FindInMap" : [ "VariableMap", "global", "INSTANCExINSTANCExINITIATEDxSHUTDOWNxBEHAVIOR"] },
				"ImageId": { "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "AMIxVMONE"] },
				"InstanceType": { "Ref" : "VMoneInstanceType" },
				"Monitoring": { "Fn::FindInMap" : [ "VariableMap", "global", "INSTANCExMONITORING"] },
                "KeyName" : { "Ref" : "IxClientSSHKey" },
				"PlacementGroupName" : { "Ref" : "KeyPlacementGroup" },
				"IamInstanceProfile": { "Ref": "KeyEC2InstanceProfile" },				
				"Tags": [
					{
						"Key": "Name",
						"Value": { "Fn::Join" : [ "_", [ { "Ref" : "UserLoginTag" }, { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }, 
							{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxTAG"] }, "VMONE2", 
							{ "Fn::FindInMap" : [ "VariableMap", "global", "APPxVERSION"] }, 
							{ "Fn::FindInMap" : [ "RegionMap", { "Ref" : "AWS::Region" }, "REGIONxTAG"]} ] ] }
					},
					{
						"Key": "Owner",
						"Value": { "Ref" : "UserEmailTag" }
					},
					{
						"Key": "Options",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "OPTIONSxTAG"] }
					},
					{
						"Key": "Project",
						"Value": { "Fn::FindInMap" : [ "VariableMap", "global", "PROJECTxTAG"] }
					}
				],
				"UserData": "",
				"NetworkInterfaces": [
					{
						"NetworkInterfaceId": {
							"Ref": "KeyVMOne2Eth0"
						},
						"DeviceIndex": "0"
					},
					{
						"NetworkInterfaceId": {
							"Ref": "KeyVMOne2Eth1"
						},
						"DeviceIndex": "1"
					}
				],
				"BlockDeviceMappings" : [
					{
						"DeviceName" : { "Fn::FindInMap" : [ "VariableMap", "global", "INSTANCExBLOCKxDEVICExNAME"] },
						"Ebs" : { 
							"DeleteOnTermination" : { "Fn::FindInMap" : [ "VariableMap", "global", "INSTANCExEBSxDELETExONxTERMINATION"] },
							"VolumeType" : { "Fn::FindInMap" : [ "VariableMap", "global", "INSTANCExEBSxVOLUMExTYPE"] }
						}
					}
				]   
			}
		},
		"KeyVMOne1Eth0ElasticIp": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": [
				"KeyGwAttach",
				"KeyVMOne1"
			],
			"Properties": {
				"Domain": "vpc"
			}
		},
		"KeyVMOne1Eth0ElasticIpAssociation": {
			"Type": "AWS::EC2::EIPAssociation",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"KeyVMOne1Eth0ElasticIp",
						"AllocationId"
					]
				},
				"NetworkInterfaceId": {
					"Ref": "KeyVMOne1Eth0"
				}
			}
		},
		"KeyVMOne2Eth0ElasticIp": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": [
				"KeyGwAttach",
				"KeyVMOne2"
			],
			"Properties": {
				"Domain": "vpc"
			}
		},
		"KeyVMOne2Eth0ElasticIpAssociation": {
			"Type": "AWS::EC2::EIPAssociation",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"KeyVMOne2Eth0ElasticIp",
						"AllocationId"
					]
				},
				"NetworkInterfaceId": {
					"Ref": "KeyVMOne2Eth0"
				}
			}
		},
        "KeyEC2InstanceProfile": {
            "Properties": {
                "Path": "/",
                "Roles": [
                    {
                        "Ref": "KeyEC2ReadOnlyAccessRole"
                    }
                ]
            },
            "Type": "AWS::IAM::InstanceProfile"
        },
		"KeyEC2ReadOnlyAccessRole": {
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Action": "sts:AssumeRole",
                            "Effect": "Allow",
                            "Principal": {
                                "Service": "ec2.amazonaws.com"
                            }
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/AmazonEC2ReadOnlyAccess"
                ],
                "Path": "/"
            },
            "Type": "AWS::IAM::Role"
        },
		"KeyVPCFlowLogAccessRole": {
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Statement": [
                        {
                            "Action": "sts:AssumeRole",
                            "Effect": "Allow",
                            "Principal": {
                                "Service": "vpc-flow-logs.amazonaws.com"
                            }
                        }
                    ],
                    "Version": "2012-10-17"
                },
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/CloudWatchLogsFullAccess"
                ],
                "Path": "/"
            },
            "Type": "AWS::IAM::Role"
        }
	},
	"Metadata" : {
		"AWS::CloudFormation::Interface" : {	
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "User Tag Configuration"
                    },
                    "Parameters": [
                        "UserEmailTag",
						"UserLoginTag"
                    ]
                },
                {
                    "Label": {
                        "default": "Ixia Client Instance Configuration"
                    },
                    "Parameters": [
						"IxClientSSHKey"
                    ]
                },
                {
                    "Label": {
                        "default": "VMone Instance Configuration"
                    },
                    "Parameters": [
                        "VMoneInstanceType"
                    ]
                },
                {
                    "Label": {
                        "default": "Security Group Configuration"
                    },
                    "Parameters": [
                        "InboundIPv4CidrBlock"
                    ]
                }				
			],
			"ParameterLabels": {
				"UserEmailTag": {
					"default": "User Email Tag"
				},
				"UserLoginTag": {
					"default": "User Login Tag"
				},
				"IxClientSSHKey": {
					"default": "Ixia Client SSH Key"
				},
				"VMoneInstanceType": {
					"default": "VMone Instance Type"
				},
				"InboundIPv4CidrBlock": {
					"default": "Inbound IPv4 CIDR Block"
				}
			}
        }
    },
    "Parameters" : {
        "UserEmailTag" : {
        "Description" : "Email address tag of user creating the stack",
        "MinLength": "14",
        "Type" : "String"
      },
        "UserLoginTag" : {
        "Description" : "Domain Login ID tag of user creating the stack",
        "MinLength": "4",
        "Type" : "String"
      },
        "IxClientSSHKey" : {
        "Description" : "Name of an existing EC2 KeyPair to enable SSH access",
        "Type" : "AWS::EC2::KeyPair::KeyName"
      },
        "VMoneInstanceType" : {
        "Description" : "Instance type of VMONE Appliance VM",
        "Type" : "String",
        "AllowedValues": [
			"c5n.18xlarge",
			"c5n.9xlarge",
			"c5n.xlarge",
			"c5.xlarge"
        ],
        "Default" : "c5n.xlarge"
      },
        "InboundIPv4CidrBlock" : {
        "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
        "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x.",
        "Description" : "IP Address /32 or IP CIDR range connecting inbound to Ixia Client",
        "MaxLength": "18",
        "MinLength": "9",
		"Type" : "String"
      }
    },
	"Outputs": {
		"KeyVMOne1": {
			"Description": "KEY_VMONE1_PRIVATE_IP",
			"Value": {
				"Fn::GetAtt": [
					"KeyVMOne1",
					"PrivateIp"
				]
			}
		},
		"KeyVMOne2": {
			"Description": "KEY_VMONE2_PRIVATE_IP",
			"Value": {
				"Fn::GetAtt": [
					"KeyVMOne2",
					"PrivateIp"
				]
			}
		}
	}
}
